--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   max-width: 364px;
   background: #17171C;
 
-  margin: 0 auto;
+  margin: 25px auto 0;
   padding: 21px 20px 25px; 
 }
 
@@ -26,13 +26,19 @@
 }
 
 .input {
+  height: 112px;
   text-align: right;
   margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .input_text {
   font-size: 96px;
   font-weight: 300;
+  width: 100%;
+  display: block;
 }
 
 .numpad {
@@ -79,10 +85,10 @@
 
 .btn-light-grey {
   background: #4E505F;
-  transition: 0.2s;
+  transition: 0.05s;
 }
 
-.btn-puprle {
+.btn-purple {
   background: #4B5EFC;
 }
 
@@ -95,7 +101,7 @@
 
 }
 
-.btn-puprle:hover {
+.btn-purple:hover {
   background: #404fd7;
 }
 
@@ -108,6 +114,6 @@
 
 }
 
-.btn-puprle:active {
+.btn-purple:active {
   background: #3a48c2;
 }
